--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,11 @@ before_install:
 
 install:
   - npm install
+  - npm install -g codecov
 
 script:
   - npm test
+  - npm run coverage
+
+after_success:
+  - codecov
