--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "description": "API Gateway Response builder for AWS Lambda",
     "main": "index.js",
     "scripts": {
-        "test": "mocha"
+        "test": "mocha",
+        "coverage": "`npm bin`/istanbul cover `npm bin`/_mocha -- --reporter min"
     },
     "keywords": [
         "api",
@@ -17,6 +18,7 @@
     "license": "MIT",
     "devDependencies": {
         "chai": "^4.1.2",
+        "istanbul": "^0.4.5",
         "mocha": "^4.0.1"
     }
 }
